// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchElement mount provides contextual information for the message 1`] = `
Object {
  "actual": "Actual:
 <Fixture>
  <div>
    <span />
  </div>
</Fixture>",
  "expected": "Expected:
 <Fixture>
  <div>
    <span />
  </div>
</Fixture>",
}
`;

exports[`toMatchElement mount provides contextual information for the message 2`] = `
Object {
  "actual": "Actual:
 <span />",
  "expected": "Expected:
 <span />",
}
`;

exports[`toMatchElement mount provides contextual information for the message 3`] = `
Object {
  "actual": "Actual:
 <Fixture>
  <div>
    <span />
  </div>
</Fixture>",
  "expected": "Expected:
 <div />",
}
`;

exports[`toMatchElement mount provides contextual information for the message 4`] = `
Object {
  "actual": "Actual:
 <Fixture>
  <div>
    <span id=\\"child\\" className=\\"foo\\" />
  </div>
</Fixture>",
  "expected": "Expected:
 <Fixture>
  <div>
    <span id=\\"child\\" className=\\"foo\\" />
  </div>
</Fixture>",
}
`;

exports[`toMatchElement mount returns the message with the proper fail verbage 1`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper fail verbage 2`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper fail verbage 3`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper fail verbage 4`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper pass verbage 1`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper pass verbage 2`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper pass verbage 3`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement mount returns the message with the proper pass verbage 4`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement shallow provides contextual information for the message 1`] = `
Object {
  "actual": "Actual:
 <div>
  <span />
</div>",
  "expected": "Expected:
 <div>
  <span />
</div>",
}
`;

exports[`toMatchElement shallow provides contextual information for the message 2`] = `
Object {
  "actual": "Actual:
 <span />",
  "expected": "Expected:
 <span />",
}
`;

exports[`toMatchElement shallow provides contextual information for the message 3`] = `
Object {
  "actual": "Actual:
 <div>
  <span />
</div>",
  "expected": "Expected:
 <div />",
}
`;

exports[`toMatchElement shallow provides contextual information for the message 4`] = `
Object {
  "actual": "Actual:
 <div>
  <span id=\\"child\\" className=\\"foo\\" />
</div>",
  "expected": "Expected:
 <div>
  <span id=\\"child\\" className=\\"foo\\" />
</div>",
}
`;

exports[`toMatchElement shallow returns the message with the proper fail verbage 1`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper fail verbage 2`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper fail verbage 3`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper fail verbage 4`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper pass verbage 1`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper pass verbage 2`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper pass verbage 3`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement shallow returns the message with the proper pass verbage 4`] = `"Expected actual value to match the expected value."`;
